load("//:plugin.bzl", "proto_plugin")

proto_plugin(
    name = "ruby_plugin",
    protoc_plugin_name = "ruby",
    outputs = ["{protopath}_pb.rb"],
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "grpc_ruby_plugin",
    output_directory = True,
    tool = "@com_github_grpc_grpc//src/compiler:grpc_ruby_plugin",
    exclusions = [
        "google/protobuf",
    ],
    visibility = ["//visibility:public"],
)
